test/Fail/Issue2455.err
Issue2455.agda:45.15-19: error: [UnequalTerms]
The terms
  x
and
  y
are not equal at type Unit
when checking that the expression refl has type
M.aux' e x ≡ M.aux' e y
